--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </head>
   <body>
     <nav>
-      <img data-aos="fade-up" src="../images/header.png" class="header" /><img
+      <img data-aos="fade-up" src="./images/header.png" class="header" /><img
         class="arrow__header"
-        src="../images/arrow2.png"
+        src="./images/arrow2.png"
       />
     </nav>
 
