--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       </div>
     </div>
     <div data-aos="fade-up" class="container__images">
-      <img class="container__images__image" src="/images/image.png" />
-      <img class="container__images__image" src="/images/image.png" />
-      <img class="container__images__image" src="/images/image.png" />
+      <img class="container__images__image" src="./images/image.png" />
+      <img class="container__images__image" src="./images/image.png" />
+      <img class="container__images__image" src="./images/image.png" />
     </div>
     <div data-aos="fade-up" class="container__text">
       <h1 class="h1__homepage">
@@ -250,7 +250,7 @@
     <h1 data-aos="fade-up" class="about__h1">The Team</h1>
     <section data-aos="fade-up" class="about">
       <div class="about__person">
-        <img src="/images/agnes.png" class="about__person__image" />
+        <img src="./images/agnes.png" class="about__person__image" />
         <h2>Agnes Shutrick</h2>
         <h3>agnesben@kth.se</h3>
         <div class="about__person__text">
@@ -259,13 +259,13 @@
         </div>
       </div>
       <div class="about__person">
-        <img src="/images/maria.png" class="about__person__image" />
+        <img src="./images/maria.png" class="about__person__image" />
         <h2>Maria Jacobson</h2>
         <h3>majacobs@kth.se</h3>
         <div class="about__person__text">Elf model; bell ornament</div>
       </div>
       <div class="about__person">
-        <img src="/images/ebba.png" class="about__person__image" />
+        <img src="./images/ebba.png" class="about__person__image" />
         <h2>Ebba Rovig</h2>
         <h3>rovig@kth.se</h3>
         <div class="about__person__text">
@@ -274,7 +274,7 @@
         </div>
       </div>
       <div class="about__person">
-        <img src="/images/erik.png" class="about__person__image" />
+        <img src="./images/erik.png" class="about__person__image" />
         <h2>Erik Meurk</h2>
         <h3>emeurk@kth.se</h3>
         <div class="about__person__text">
@@ -282,7 +282,7 @@
         </div>
       </div>
       <div class="about__person">
-        <img src="/images/amanda.png" class="about__person__image" />
+        <img src="./images/amanda.png" class="about__person__image" />
         <h2>Amanda Lindqvist</h2>
         <h3>amlindqv@kth.se</h3>
         <div class="about__person__text">
