--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <h1 class="h1__homepage">Making of project</h1>
         <iframe
           class="container__video"
-          src="https://player.vimeo.com/video/766153367?h=a8b6d8d49e&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+          src="https://player.vimeo.com/video/782550067?h=8cebc1dbc8"
           frameborder="0"
           allow="autoplay; fullscreen; picture-in-picture"
           allowfullscreen
-          title="SEEDTRAILER.mp4"
+          title="Making of Elf"
         ></iframe>
       </div>
     </div>
@@ -83,9 +83,9 @@
       </div>
     </div>
     <div data-aos="fade-up" class="container__images">
-      <img class="container__images__image" src="./images/image.png" />
-      <img class="container__images__image" src="./images/image.png" />
-      <img class="container__images__image" src="./images/image.png" />
+      <img class="container__images__image" src="./images/decor.png" />
+      <img class="container__images__image" src="./images/outside.png" />
+      <img class="container__images__image" src="./images/looking.png" />
     </div>
     <div data-aos="fade-up" class="container__text">
       <h1 class="h1__homepage">
@@ -106,9 +106,9 @@
       </div>
     </div>
     <div data-aos="fade-up" class="container__images">
-      <img class="container__images__tester" src="./images/testing.png" />
-      <img class="container__images__tester" src="./images/user.png" />
-      <img class="container__images__tester" src="./images/tablet.png" />
+      <img class="container__images__tester" src="./images/tester2.png" />
+      <img class="container__images__tester" src="./images/tester1.png" />
+      <img class="container__images__tester" src="./images/tester3.png" />
     </div>
     <div data-aos="fade-up" class="container__text">
       <h1 class="h1__homepage">Challenges & Obstacles</h1>
